--- a/CookPopularControl/Themes/MessageDialogStyle.xaml
+++ b/CookPopularControl/Themes/MessageDialogStyle.xaml
@@ -3,7 +3,8 @@
                     xmlns:win="clr-namespace:CookPopularControl.Controls.Windows"
                     xmlns:panel="clr-namespace:CookPopularControl.Controls.Panels"
                     xmlns:toolConverters="clr-namespace:CookPopularControl.Tools.Windows.Converters"
-                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
+                    xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached"
+                    xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/ButtonStyle.xaml" />
@@ -19,12 +20,14 @@
 
     <Style x:Key="MessageDialogSelectedButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
         <Setter Property="MinWidth" Value="60" />
+        <Setter Property="Height" Value="26" />
         <Setter Property="Margin" Value="8,0" />
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="2" />
     </Style>
 
     <Style x:Key="MessageDialogUnSelectedButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}">
         <Setter Property="MinWidth" Value="60" />
+        <Setter Property="Height" Value="26" />
         <Setter Property="Margin" Value="8,0" />
         <Setter Property="Background" Value="{DynamicResource UnEnabledBrush}" />
         <Setter Property="attached:FrameworkElementBaseAttached.CornerRadius" Value="2" />
@@ -41,33 +44,45 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type win:MessageDialog}">
-                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="#FFFFFFFF">
-                        <Grid Margin="{TemplateBinding Padding}">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition />
-                                <RowDefinition Height="Auto" MinHeight="26"/>
-                                <RowDefinition Height="10"/>
-                            </Grid.RowDefinitions>
-                            <panel:SimpleGrid Grid.Row="0" Background="{TemplateBinding ClientTitleBarBackground}" TextElement.Foreground="{TemplateBinding ClientTitleBarForeground}">
-                                <TextBlock Text="{TemplateBinding Title}" Foreground="{TemplateBinding ClientTitleBarForeground}" Style="{StaticResource MessageDialogTextBlockStyle}" 
-                                           HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0"/>
-                                <Button x:Name="CloseButton" Content="&#xe600;" FontFamily="{DynamicResource WindowIcons}" Style="{StaticResource WindowIconButtonStyle}"
-                                        Command="{x:Static SystemCommands.CloseWindowCommand}" ToolTip="关闭" HorizontalAlignment="Right" Cursor="Arrow"/>
-                            </panel:SimpleGrid>
-                            <Grid Grid.Row="1" HorizontalAlignment="Center">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Path Width="30" Height="30" Data="{TemplateBinding Image}" Fill="{TemplateBinding ImageBrush}" Stretch="Uniform"
-                                      Visibility="{TemplateBinding IsShowImage,Converter={toolConverters:BooleanToVisibilityConverter}}"/>
-                                <TextBlock Grid.Column="1" Text="{TemplateBinding Message}" Style="{StaticResource MessageDialogTextBlockStyle}" TextWrapping="Wrap" 
-                                           HorizontalAlignment="Center" VerticalAlignment="Center" Margin="8,0"/>
-                            </Grid>
-                            <StackPanel Grid.Row="2" x:Name="PART_Panel" Orientation="Horizontal" HorizontalAlignment="Center"/>
-                        </Grid>
-                    </Border>
+                    <AdornerDecorator CacheMode="{DynamicResource DefaultBitmapCache}" SnapsToDevicePixels="True">
+                        <win:ChromeWindowClient>
+                            <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=ClientTitleBarHeight}"/>
+                                        <RowDefinition />
+                                    </Grid.RowDefinitions>
+                                    <panel:SimpleGrid Grid.Row="0" TextElement.Foreground="{TemplateBinding ClientTitleBarForeground}" Background="{TemplateBinding ClientTitleBarBackground}" >
+                                        <TextBlock Text="{TemplateBinding Title}" Foreground="{TemplateBinding ClientTitleBarForeground}" Style="{StaticResource MessageDialogTextBlockStyle}" VerticalAlignment="Center" Margin="8,0" />
+                                        <Button Command="{x:Static SystemCommands.CloseWindowCommand}" ToolTip="关闭" Cursor="Arrow" WindowChrome.IsHitTestVisibleInChrome="True"
+                                                attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}"
+                                                Style="{StaticResource WindowIconButtonStyle}" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                                    </panel:SimpleGrid>
+                                    <Grid Grid.Row="1">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="4*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition/>
+                                            <RowDefinition Height="Auto" MinHeight="26"/>
+                                        </Grid.RowDefinitions>
+                                        <Path Grid.Row="0" Grid.Column="0" Width="30" Height="30" Data="{TemplateBinding Image}" Fill="{TemplateBinding ImageBrush}" Stretch="Uniform" 
+                                              Visibility="{TemplateBinding IsShowImage,Converter={toolConverters:BooleanToVisibilityConverter}}"/>
+                                        <ScrollViewer Grid.Row="0" Grid.Column="1">
+                                            <TextBlock Text="{TemplateBinding Message}" Style="{StaticResource MessageDialogTextBlockStyle}" TextWrapping="Wrap" VerticalAlignment="Center"/>
+                                        </ScrollViewer>
+                                        <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" x:Name="PART_Panel" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10"/>
+                                    </Grid>
+                                </Grid>
+                            </Border>
+                        </win:ChromeWindowClient>
+                    </AdornerDecorator>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsNonClientActive" Value="False">
+                            <Setter Property="ClientTitleBarBackground" Value="{DynamicResource UnEnabledBrush}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
