--- a/CookPopularControl/Themes/WindowStyle.xaml
+++ b/CookPopularControl/Themes/WindowStyle.xaml
@@ -65,11 +65,11 @@
         <Setter Property="ClientTitleBarAdditionalContent" Value="{x:Null}" />
         <Setter Property="ClientTitleBarHeight" Value="{DynamicResource Double30Value}" />
         <Setter Property="ClientTitleBarForeground" Value="{DynamicResource PrimaryColorTheme}" />
-        <Setter Property="ClientTitleBarBackground" Value="{DynamicResource DefaultBackgroundBrush}" />
+        <Setter Property="ClientTitleBarBackground" Value="{DynamicResource AssistantBackgroundBrush}" />
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
                 <WindowChrome CaptionHeight="{Binding RelativeSource={RelativeSource AncestorType=win:NormalWindow},Path=ClientTitleBarHeight}" 
-                              UseAeroCaptionButtons="False" GlassFrameThickness="0,0,0,1" CornerRadius="0"/>
+                              UseAeroCaptionButtons="True" GlassFrameThickness="1" CornerRadius="0" NonClientFrameEdges="None"/>
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
@@ -77,14 +77,14 @@
                 <ControlTemplate TargetType="{x:Type win:NormalWindow}">
                     <AdornerDecorator CacheMode="{DynamicResource DefaultBitmapCache}" SnapsToDevicePixels="True">
                         <win:ChromeWindowClient>
-                            <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
+                            <Border x:Name="RootBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
                                     Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
                                 <Grid>
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=ClientTitleBarHeight}"/>
                                         <RowDefinition />
                                     </Grid.RowDefinitions>
-                                    <Grid Grid.Row="0" Name="PART_TitleBarArea" TextElement.Foreground="{TemplateBinding ClientTitleBarForeground}" Background="{TemplateBinding ClientTitleBarBackground}"
+                                    <Grid Grid.Row="0" x:Name="PART_TitleBarArea" TextElement.Foreground="{TemplateBinding ClientTitleBarForeground}" Background="{TemplateBinding ClientTitleBarBackground}"
                                           Visibility="{TemplateBinding IsShowClientTitleBar,Converter={toolConverters:BooleanToVisibilityConverter}}">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition />
@@ -148,6 +148,9 @@
                             <Setter Property="Visibility" Value="Collapsed" TargetName="MaximizedButton"/>
                             <Setter Property="Visibility" Value="Collapsed" TargetName="NormalButton"/>
                         </Trigger>
+                        <Trigger Property="IsNonClientActive" Value="False">
+                            <Setter Property="ClientTitleBarBackground" Value="{DynamicResource UnEnabledBrush}"/>
+                        </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
                                 <Condition Property="ResizeMode" Value="CanResizeWithGrip"/>
@@ -162,19 +165,21 @@
     </Style>
 
     <Style x:Key="SideBarWindowStyle" TargetType="{x:Type win:SideBarWindow}" BasedOn="{StaticResource DefaultNormalWindowStyle}">
+        <Setter Property="ClientTitleBarAdditionalContent" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type win:SideBarWindow}">
                     <AdornerDecorator CacheMode="{DynamicResource DefaultBitmapCache}" SnapsToDevicePixels="True">
                         <win:ChromeWindowClient>
-                            <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
+                            <Border x:Name="RootBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" 
                                     Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=ClientTitleBarHeight}"/>
                                         <RowDefinition />
                                     </Grid.RowDefinitions>
-                                    <Grid Background="{DynamicResource AssistantBackgroundBrush}">
+                                    <Grid Grid.Row="0" x:Name="PART_TitleBarArea" TextElement.Foreground="{TemplateBinding ClientTitleBarForeground}" Background="{TemplateBinding ClientTitleBarBackground}"
+                                          Visibility="{TemplateBinding IsShowClientTitleBar,Converter={toolConverters:BooleanToVisibilityConverter}}">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto"/>
                                             <ColumnDefinition />
@@ -193,7 +198,8 @@
                                                     attached:FrameworkElementBaseAttached.IconHeight="14"
                                                     Style="{StaticResource WindowIconButtonStyle}"/>
                                         </StackPanel>
-                                        <TextBlock Grid.Column="1" Text="{TemplateBinding Title}" Foreground="{TemplateBinding ClientTitleBarForeground}" FontSize="14" IsHitTestVisible="False" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        <TextBlock Grid.Column="1" Text="{TemplateBinding Title}" Foreground="{TemplateBinding ClientTitleBarForeground}" FontSize="14" IsHitTestVisible="False" HorizontalAlignment="Center" VerticalAlignment="Center"
+                                                   Visibility="{TemplateBinding IsShowTitle,Converter={toolConverters:BooleanToVisibilityConverter}}"/>
                                         <StackPanel Grid.Column="2" Orientation="Horizontal" WindowChrome.IsHitTestVisibleInChrome="True" >
                                             <Button x:Name="MinimizedButton" Command="{x:Static SystemCommands.MinimizeWindowCommand}" ToolTip="最小化"
                                                     attached:FrameworkElementBaseAttached.IconGeometry="{DynamicResource MinimizeGeometry}"
@@ -236,6 +242,9 @@
                         <Trigger Property="ResizeMode" Value="CanMinimize">
                             <Setter Property="Visibility" Value="Collapsed" TargetName="MaximizedButton"/>
                             <Setter Property="Visibility" Value="Collapsed" TargetName="NormalButton"/>
+                        </Trigger>
+                        <Trigger Property="IsNonClientActive" Value="False">
+                            <Setter Property="ClientTitleBarBackground" Value="{DynamicResource UnEnabledBrush}"/>
                         </Trigger>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
