--- a/MvvmTestDemo/DemosView/AnimationPathDemo.xaml
+++ b/MvvmTestDemo/DemosView/AnimationPathDemo.xaml
@@ -8,7 +8,7 @@
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
     
-    <Grid>
+    <Grid Width="{StaticResource DemosViewViewDefaultWidth}">
         <Viewbox Width="200" Height="200">
             <pc:AnimationPath Width="200" Height="200" Duration="0:0:5" Stretch="Uniform" IsEnabled="True"
                               Data="{StaticResource ArchGeometry}"/>
