--- a/MvvmTestDemo/DemosView/ButtonDemo.xaml
+++ b/MvvmTestDemo/DemosView/ButtonDemo.xaml
@@ -12,7 +12,7 @@
              DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
     <UserControl.Resources>
-        <Style x:Key="ButtonStyles" TargetType="{x:Type Button}" BasedOn="{StaticResource ContentWithIconButtonStyle}">
+        <Style x:Key="ButtonStyles" TargetType="{x:Type Button}" BasedOn="{StaticResource ButtonContentWithIconStyle}">
             <Setter Property="Width" Value="300" />
             <Setter Property="Height" Value="60" />
             <Setter Property="FontSize" Value="20" />
@@ -23,8 +23,38 @@
     </UserControl.Resources>
 
     <ScrollViewer>
-        <StackPanel Width="800" VerticalAlignment="Center">
+        <StackPanel Width="{StaticResource DemosViewViewDefaultWidth}" VerticalAlignment="Center">
             <WrapPanel HorizontalAlignment="Center">
+                <Button Width="180" Height="60" Content="DefaultButton" FontSize="20" ToolTip="DefaultButton"
+                        Style="{StaticResource DefaultButtonStyle}"
+                        pc:FrameworkElementBaseAttached.CornerRadius="20">
+                    <behavior:Interaction.Behaviors>
+                        <pc:ControlBorderBehavior AnimationType="Thickness" BorderBrush="Purple" BorderThickness="3"/>
+                    </behavior:Interaction.Behaviors>
+                </Button>
+                <Button Width="180" Height="60" Content="DefaultButton" FontSize="20" ToolTip="OutlineButton"
+                        Style="{StaticResource ButtonOutlineStyle}" Margin="10,0"
+                        pc:FrameworkElementBaseAttached.CornerRadius="20">
+                    <behavior:Interaction.Behaviors>
+                        <pc:ControlBorderBehavior AnimationType="Path"/>
+                    </behavior:Interaction.Behaviors>
+                </Button>
+                <Button Width="180" Height="60" Content="DefaultButton" FontSize="20" ToolTip="TransparentButton"
+                        Style="{StaticResource ButtonTransparentStyle}" >
+                    <behavior:Interaction.Behaviors>
+                        <pc:ControlBorderBehavior AnimationType="Path"/>
+                    </behavior:Interaction.Behaviors>
+                </Button>
+                <Button Width="180" Height="60" Content="DefaultButton" FontSize="20" ToolTip="NoMouseOverTransparentButton"
+                        Style="{StaticResource ButtonNoMouseOverTransparentStyle}"
+                        pc:FrameworkElementBaseAttached.CornerRadius="20">
+                    <behavior:Interaction.Behaviors>
+                        <pc:ControlBorderBehavior AnimationType="Path"/>
+                    </behavior:Interaction.Behaviors>
+                </Button>
+            </WrapPanel>
+
+            <WrapPanel HorizontalAlignment="Center" Margin="0,30">
                 <Button Style="{StaticResource ButtonStyles}" ToolTip="IconWithContentButtonLeft"
                         HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
                         pc:FrameworkElementBaseAttached.IconDirection="Left"
@@ -39,7 +69,7 @@
                 <Button Style="{StaticResource ButtonStyles}" Margin="10,10,0,0" ToolTip="IconWithContentButtonBottom"
                         pc:FrameworkElementBaseAttached.IconDirection="Bottom"
                         pc:FrameworkElementBaseAttached.IconMargin="0,0,0,10"/>
-                <Button Style="{StaticResource ButtonStyles}" Margin="0,10,0,0" IsEnabled="False" ToolTip="IconButtonLeft"
+                <Button Style="{StaticResource ButtonStyles}" Margin="0,10,0,0" IsEnabled="False" ToolTip="IconButtonUnEnabled"
                         HorizontalContentAlignment="Center" VerticalContentAlignment="Center" 
                         pc:FrameworkElementBaseAttached.IconDirection="Left" Foreground="Purple"
                         pc:FrameworkElementBaseAttached.IconMargin="5,0,0,0"
@@ -47,40 +77,28 @@
                 <Button Width="50" Height="50" Margin="10,10,0,0" ToolTip="IconButton"
                         pc:FrameworkElementBaseAttached.IconWidth="30"
                         pc:FrameworkElementBaseAttached.IconHeight="30"
-                        pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource SuccessGeometry}"
+                        pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource CloseCircleGeometry}"
                         Style="{StaticResource ButtonIconStyle}"/>
-                <Button Height="32" Margin="10,10,0,0" ToolTip="IconTransparentButton"
-                        Foreground="Red"
+                <Button Margin="10,10,0,0" ToolTip="IconTransparentButton"
                         pc:FrameworkElementBaseAttached.IconWidth="30"
                         pc:FrameworkElementBaseAttached.IconHeight="30"
                         pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource SuccessGeometry}"
                         Style="{StaticResource ButtonTransparentIconStyle}"/>
+                <Button Margin="10,10,0,0" ToolTip="NoMouseOverIconTransparentButton"
+                        Foreground="Red"
+                        pc:FrameworkElementBaseAttached.IconWidth="24"
+                        pc:FrameworkElementBaseAttached.IconHeight="24"
+                        pc:FrameworkElementBaseAttached.IconGeometry="{StaticResource CloseGeometry}"
+                        Style="{StaticResource ButtonNoMouseOverTransparentIconStyle}"/>
             </WrapPanel>
 
-            <WrapPanel HorizontalAlignment="Center" Margin="0,20,0,0">
-                <Button Width="200" Height="60" Content="DefaultButton" FontSize="20" ToolTip="DefaultButton"
-                        Style="{StaticResource DefaultButtonStyle}"
-                        pc:FrameworkElementBaseAttached.CornerRadius="20">
-                    <behavior:Interaction.Behaviors>
-                        <pc:ControlBorderBehavior AnimationType="Thickness" BorderBrush="Purple" BorderThickness="3"/>
-                    </behavior:Interaction.Behaviors>
-                </Button>
-                <Button Width="200" Height="60" Content="DefaultButton" FontSize="20" ToolTip="OutlineButton"
-                        Style="{StaticResource ButtonOutlineStyle}" Margin="10,0"
-                        pc:FrameworkElementBaseAttached.CornerRadius="20">
-                    <behavior:Interaction.Behaviors>
-                        <pc:ControlBorderBehavior AnimationType="Path"/>
-                    </behavior:Interaction.Behaviors>
-                </Button>
-            </WrapPanel>
-
-            <WrapPanel HorizontalAlignment="Center" Margin="0,20,0,0">
+            <WrapPanel HorizontalAlignment="Center">
                 <Button Width="320" Height="200" Content="ContentWithGifButton" FontSize="20" ToolTip="ContentWithGifButton"
                         pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif"
                         pc:ButtonAssist.ImageWidth="50"
                         pc:ButtonAssist.ImageHeight="50"
                         pc:FrameworkElementBaseAttached.IconMargin="0,0,10,0"
-                        Style="{StaticResource ContentWithGifButtonStyle}"/>
+                        Style="{StaticResource ButtonContentWithGifStyle}"/>
                 <Button Width="200" Height="200" Margin="20,0" ToolTip="GifButton"
                         pc:ButtonAssist.GifSource="/Resources/Gif/programmer.gif"
                         pc:ButtonAssist.ImageWidth="100"
@@ -99,11 +117,22 @@
                     </behavior:Interaction.Behaviors>
                 </Button>
             </WrapPanel>
-            <WrapPanel HorizontalAlignment="Center" Margin="0,20,0,0">
-                <Button Content="ProgressButton" Width="300" Height="60" ToolTip="ProgressButton"
-                        FontSize="20" Foreground="Purple" IsEnabled="{Binding IsButtonEnabled}"
-                        Style="{StaticResource ButtonProgressStyle}"
-                        pc:ButtonAssist.ProgressValue="{Binding Value,Mode=TwoWay}" Click="Button_Click"/>
+            
+            <WrapPanel HorizontalAlignment="Center" Margin="0,30">
+                <Button Content="{Binding ButtonContent}" Width="300" Height="60" FontSize="20" ToolTip="LinearProgressButton"                        
+                        Style="{StaticResource ButtonLinearProgressStyle}" 
+                        pc:ButtonAssist.ProgressValue="{Binding Value,Mode=TwoWay}" Click="Button_Click"
+                        pc:ButtonAssist.ProgressBarBrush="LimeGreen"/>
+                <Button Content="{Binding ButtonContent}" Width="100" Height="100" FontSize="20" ToolTip="CircularProgressButton"
+                        Style="{StaticResource ButtonCircularProgressStyle}" Margin="20,0" 
+                        pc:ButtonAssist.ProgressValue="{Binding Value,Mode=TwoWay}" Click="Button_Click"
+                        pc:FrameworkElementBaseAttached.CornerRadius="100"
+                        pc:ButtonAssist.ProgressBarBrush="Yellow"/>
+                <Button Content="{Binding ButtonContent}" Width="200" Height="200" FontSize="20" ToolTip="WaveProgressButton"
+                        Style="{StaticResource ButtonWaveProgressStyle}" 
+                        pc:ButtonAssist.ProgressValue="{Binding Value,Mode=TwoWay}" Click="Button_Click"
+                        pc:FrameworkElementBaseAttached.CornerRadius="100"
+                        pc:ButtonAssist.ProgressBarBrush="BlueViolet"/>
             </WrapPanel>
         </StackPanel>
     </ScrollViewer>
